# src/routes/dashboard.routes.js
@@ -7,5 +7,6 @@ const auth = require('../middlewares/auth');
 router.get('/metrics', auth(['admin','docente']), controller.getMetrics);
 // Actualizar o crear una metrica
 router.post('/metrics', auth(['admin','docente']), controller.updateMetric);
+router.get('/metrics/event/:id', auth(['admin','docente']), controller.getEventMetrics);
 
 module.exports = router;
