# src/routes/eventos.routes.js
@@ -1,12 +1,14 @@
 const express = require('express');
 const router = express.Router();
+// Las fechas y horas son opcionales; se puede indicar la duracion en dias u horas del evento
 const {
   crearEvento,
   actualizarEvento,
   obtenerEventos,
   obtenerEventoPorId,
-  eliminarEvento
-} = require('../controllers/evento.controllers');
+  eliminarEvento,
+  finalizarEvento
+} = require('../controllers/evento.controller');
 const authMiddleware = require('../middlewares/auth');
 
 router.post('/crear', authMiddleware(['docente', 'admin']), crearEvento);
@@ -15,6 +17,8 @@ router.get('/', obtenerEventos);
 router.get('/:id', obtenerEventoPorId);
 
 router.put('/:id', authMiddleware(['docente', 'admin']), actualizarEvento);
+
+router.post('/:id/finalizar', authMiddleware(['docente', 'admin']), finalizarEvento);
 
 router.delete('/:id', authMiddleware(['docente', 'admin']), eliminarEvento);
 
